--- a/po/ru.po
+++ b/po/ru.po
@@ -1,74 +1,75 @@
-# French translations for com.github.matfantinel.moneta package.
+# Russian translations for com.github.matfantinel.moneta package.
 # Copyright (C) 2020 THE com.github.matfantinel.moneta'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.matfantinel.moneta package.
-# Nathan Bonnemains (@NathanBnm), 2020.
+# Automatically generated, 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.matfantinel.moneta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-31 12:54-0300\n"
-"PO-Revision-Date: 2020-01-31 13:44+0100\n"
-"Last-Translator: Nathan Bonnemains (@NathanBnm)\n"
+"PO-Revision-Date: 2020-01-31 12:54-0300\n"
+"Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: fr\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/Objects/Currencies.vala:41
 msgid "US Dollar"
-msgstr "Dollar américain"
+msgstr "Доллар США"
 
 #: src/Objects/Currencies.vala:44
 msgid "Brazilian Real"
-msgstr "Réal brésilien"
+msgstr "Бразильский Реал"
 
 #: src/Objects/Currencies.vala:47
 msgid "Euro"
-msgstr "Euro"
+msgstr "Евро"
 
 #: src/Objects/Currencies.vala:50
 msgid "British Pound"
-msgstr "Livre sterling"
+msgstr "Фунт стерлингов"
 
 #: src/Objects/Currencies.vala:53
 msgid "Australian Dollar"
-msgstr "Dollar australien"
+msgstr "Австралийский доллар"
 
 #: src/Objects/Currencies.vala:56
 msgid "Canadian Dollar"
-msgstr "Dollar canadien"
+msgstr "Канадский доллар"
 
 #: src/Objects/Currencies.vala:59
 msgid "Chinese Yuan"
-msgstr "Yuan chinois"
+msgstr "Китайский юань"
 
 #: src/Objects/Currencies.vala:62
 msgid "Indian Rupee"
-msgstr "Roupie indienne"
+msgstr "Индийская рупия"
 
 #: src/Objects/Currencies.vala:65
 msgid "Japanese Yen"
-msgstr "Yen japonais"
+msgstr "Японская иена"
 
 #: src/Objects/Currencies.vala:68
 msgid "Russian Ruble"
-msgstr "Rouble russe"
+msgstr "Российский рубль"
 
 #: src/Objects/Currencies.vala:71
 msgid "Swiss Franc"
-msgstr "Franc suisse"
+msgstr "Швейцарский фанк"
 
 #: src/Objects/Currencies.vala:74
 msgid "Argentinian Peso"
-msgstr "Peso argentin"
+msgstr "Аргентинский песо"
 
 #: src/Objects/Currencies.vala:77
 msgid "Czech Koruna"
-msgstr "Couronne tchèque"
+msgstr "Чешская крона"
 
 #: src/MainWindow.vala:80
 msgid "Updated every 10 minutes"
-msgstr "Mis à jour toutes les 10 minutes"
+msgstr "Обновляется каждые 10 минут"
