--- a/po/hu.po
+++ b/po/hu.po
@@ -1,4 +1,4 @@
-# French translations for com.github.matfantinel.moneta package.
+# magyar (Hungarian) translations for com.github.matfantinel.moneta package.
 # Copyright (C) 2020 THE com.github.matfantinel.moneta'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.matfantinel.moneta package.
 # Nathan Bonnemains (@NathanBnm), 2020.
@@ -9,9 +9,9 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-01-31 12:54-0300\n"
 "PO-Revision-Date: 2020-01-31 13:44+0100\n"
-"Last-Translator: Nathan Bonnemains (@NathanBnm)\n"
+"Last-Translator: Óvári (@ovari)\n"
 "Language-Team: none\n"
-"Language: fr\n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,56 +19,56 @@ msgstr ""
 
 #: src/Objects/Currencies.vala:41
 msgid "US Dollar"
-msgstr "Dollar américain"
+msgstr "amerikai dollár"
 
 #: src/Objects/Currencies.vala:44
 msgid "Brazilian Real"
-msgstr "Réal brésilien"
+msgstr "brazíliai real"
 
 #: src/Objects/Currencies.vala:47
 msgid "Euro"
-msgstr "Euro"
+msgstr "euró"
 
 #: src/Objects/Currencies.vala:50
 msgid "British Pound"
-msgstr "Livre sterling"
+msgstr "brit font"
 
 #: src/Objects/Currencies.vala:53
 msgid "Australian Dollar"
-msgstr "Dollar australien"
+msgstr "ausztrál dollár"
 
 #: src/Objects/Currencies.vala:56
 msgid "Canadian Dollar"
-msgstr "Dollar canadien"
+msgstr "kanadai dollár"
 
 #: src/Objects/Currencies.vala:59
 msgid "Chinese Yuan"
-msgstr "Yuan chinois"
+msgstr "kínai jüan"
 
 #: src/Objects/Currencies.vala:62
 msgid "Indian Rupee"
-msgstr "Roupie indienne"
+msgstr "indiai rúpia"
 
 #: src/Objects/Currencies.vala:65
 msgid "Japanese Yen"
-msgstr "Yen japonais"
+msgstr "japán jen"
 
 #: src/Objects/Currencies.vala:68
 msgid "Russian Ruble"
-msgstr "Rouble russe"
+msgstr "orosz rubel"
 
 #: src/Objects/Currencies.vala:71
 msgid "Swiss Franc"
-msgstr "Franc suisse"
+msgstr "svájci frank"
 
 #: src/Objects/Currencies.vala:74
 msgid "Argentinian Peso"
-msgstr "Peso argentin"
+msgstr "argentin peso"
 
 #: src/Objects/Currencies.vala:77
 msgid "Czech Koruna"
-msgstr "Couronne tchèque"
+msgstr "cseh korona"
 
 #: src/MainWindow.vala:80
 msgid "Updated every 10 minutes"
-msgstr "Mis à jour toutes les 10 minutes"
+msgstr "10 percenként frissítve"
