--- a/po/extra/hu.po
+++ b/po/extra/hu.po
@@ -1,4 +1,4 @@
-# magzar (Hungarian) translations for extra package.
+# magyar (Hungarian) translations for extra package.
 # Copyright (C) 2020 THE extra'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the extra package.
 # Óvári (@ovari), 2020.
