--- a/po/es.po
+++ b/po/es.po
@@ -1,29 +1,30 @@
-# French translations for com.github.matfantinel.moneta package.
+# Russian translations for com.github.matfantinel.moneta package.
 # Copyright (C) 2020 THE com.github.matfantinel.moneta'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.matfantinel.moneta package.
-# Nathan Bonnemains (@NathanBnm), 2020.
+# Automatically generated, 2020.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: com.github.matfantinel.moneta\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-02-02 11:45-0700\n"
-"PO-Revision-Date: 2020-01-31 13:44+0100\n"
-"Last-Translator: Nathan Bonnemains (@NathanBnm)\n"
+"PO-Revision-Date: 2020-01-31 12:54-0300\n"
+"Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: fr\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
+"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: src/Objects/Currencies.vala:42
 msgid "US Dollar"
-msgstr "Dollar américain"
+msgstr "Dólar Estadounidense"
 
 #: src/Objects/Currencies.vala:45
 msgid "Brazilian Real"
-msgstr "Réal brésilien"
+msgstr "Real Brasileño"
 
 #: src/Objects/Currencies.vala:48
 msgid "Euro"
@@ -31,49 +32,48 @@ msgstr "Euro"
 
 #: src/Objects/Currencies.vala:51
 msgid "British Pound"
-msgstr "Livre sterling"
+msgstr "Libra Esterlina"
 
 #: src/Objects/Currencies.vala:54
 msgid "Australian Dollar"
-msgstr "Dollar australien"
+msgstr "Dólar Australiano"
 
 #: src/Objects/Currencies.vala:57
 msgid "Canadian Dollar"
-msgstr "Dollar canadien"
+msgstr "Dólar Canadiense"
 
 #: src/Objects/Currencies.vala:60
 msgid "Chinese Yuan"
-msgstr "Yuan chinois"
+msgstr "Yuan Chino"
 
 #: src/Objects/Currencies.vala:63
 msgid "Indian Rupee"
-msgstr "Roupie indienne"
+msgstr "Rupia India"
 
 #: src/Objects/Currencies.vala:66
 msgid "Japanese Yen"
-msgstr "Yen japonais"
+msgstr "Yen Japonés"
 
 #: src/Objects/Currencies.vala:69
 msgid "Russian Ruble"
-msgstr "Rouble russe"
+msgstr "Rublo Ruso"
 
 #: src/Objects/Currencies.vala:72
 msgid "Swiss Franc"
-msgstr "Franc suisse"
+msgstr "Franco Suizo"
 
 #: src/Objects/Currencies.vala:75
 msgid "Argentinian Peso"
-msgstr "Peso argentin"
+msgstr "Peso Argentino"
 
 #: src/Objects/Currencies.vala:78
 msgid "Czech Koruna"
-msgstr "Couronne tchèque"
+msgstr "Corona Checa"
 
 #: src/Objects/Currencies.vala:81
-#, fuzzy
 msgid "Mexican Peso"
-msgstr "Peso mexicain"
+msgstr "Peso Mexicano"
 
 #: src/MainWindow.vala:80
 msgid "Updated every 10 minutes"
-msgstr "Mis à jour toutes les 10 minutes"
+msgstr "Actualizado cada 10 minutos"
