--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2020-01-31 12:54-0300\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: ru\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
